# LLM-DataForge

./: .gitignore  PROJECT_REPORT.md  README.md  pyproject.toml  requirements.txt
configs/: pipeline.yaml
data/raw/: code.jsonl  document.jsonl  instruction.jsonl  web.jsonl
src/llm_dataforge/: __init__.py  clean.py  cli.py  dedup.py  ingest.py  parse.py  quality.py  report.py  sampler.py  schema.py  tokenize_stats.py  utils.py
tests/: test_clean.py  test_dedup.py  test_pipeline.py  test_quality.py
