[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-dataforge"
version = "0.1.0"
description = "A lightweight reproducible LLM data quality pipeline for interview and teaching scenarios."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "LLM-DataForge Contributors" }]
dependencies = [
  "pyyaml>=6.0.0",
  "beautifulsoup4>=4.12.0",
  "tqdm>=4.66.0",
  "matplotlib>=3.7.0",
]

[project.optional-dependencies]
hf = ["transformers>=4.40.0", "datasets>=2.18.0", "pyarrow>=15.0.0"]
dev = ["pytest>=7.4.0", "pandas>=2.0.0"]

[project.scripts]
llm-dataforge = "llm_dataforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
